--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "immer": "^6.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
